fix: on chrome after moving the task the whole visible area scrolled down to the bottom

--- a/kanbanik-web/src/main/webapp/kanbanik.css
+++ b/kanbanik-web/src/main/webapp/kanbanik.css
@@ -338,7 +338,7 @@ body {
 	}		
 			
 	.control-panel-style {		
-		float: left;		
+		display: inline-table;
 	}		
 			
 	textarea {		
